fix: layout problems on small screens

--- a/projects/mat-datatable-demo/src/app/app.component.scss
+++ b/projects/mat-datatable-demo/src/app/app.component.scss
@@ -25,7 +25,7 @@
 .sort-button,
 .activation-button,
 .selection-button {
-  margin: 0 1em 0 0;
+  margin: 0 1em 1em 0;
 }
 
 .current-sort,
